# sdrangel

./: Readme.md
.github/workflows/: linux.yml
plugins/channelrx/demodadsb/sideviews/: ReadMe.txt
plugins/channelrx/freqscanner/: CMakeLists.txt  freqscanner.cpp  freqscanner.h  freqscannergui.cpp  freqscannergui.h
plugins/feature/map/Cesium/: index.cjs  index.js
plugins/feature/map/Cesium/Workers/: chunk-23RYXNR3.js  chunk-2RJONVEL.js  chunk-2V6KZTKL.js  chunk-3PT5NNSP.js  chunk-3RMLTUUP.js  chunk-3RSLEP7W.js  chunk-4OIYAFXA.js  chunk-ALKSRI7Y.js  chunk-ASLWXOD7.js  chunk-AVPLM4UI.js  chunk-BCYPTFKK.js  chunk-BKYT7QHD.js  chunk-EFXTPVRC.js  chunk-ELJAHN3H.js  chunk-FGKVHLJ4.js  chunk-FUD3WFGN.js  chunk-G65SAF2P.js  chunk-HRZKIJQA.js  chunk-IAW6QHRG.js  chunk-ITJR6PVW.js  chunk-J3L5WX3X.js  chunk-JQLYZQ6V.js  chunk-K6A7NKZT.js  chunk-L4JCTZ6Y.js  chunk-LUT6AMUC.js  chunk-NEXD3R4K.js  chunk-NXL34BSE.js  chunk-OAGMF473.js  chunk-OM62BMPV.js  chunk-PNMU44JZ.js  chunk-PZWPGERZ.js  chunk-Q4LSC5X3.js  chunk-Q7QJJ4HI.js  chunk-QFKZXFLI.js  chunk-QXSX66ML.js  chunk-RQKZTHAV.js  chunk-S3L7VZFL.js  chunk-S5KJ4JQS.js  chunk-SP23RJSN.js  chunk-U3N6LNE4.js  (+54 more)
plugins/feature/map/data/: README.txt
plugins/feature/map/map/: cockpit.js  grid.js  map3d.html
plugins/feature/skymap/html/: aladin.html
sdrbase/resources/webapi/doc/swagger/include/: FreqScanner.yaml
sdrgui/gui/: checklist.cpp  checklist.h
swagger/: CMakeLists.txt
swagger/sdrangel/api/swagger/include/: FreqScanner.yaml
swagger/sdrangel/code/qt5/client/: SWGFreqScannerActions.cpp  SWGFreqScannerActions.h  SWGFreqScannerChannelState.cpp  SWGFreqScannerChannelState.h  SWGFreqScannerFrequencyModification.cpp  SWGFreqScannerFrequencyModification.h  SWGObject.h
